Adding more folders to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,22 @@ typings/
 # dotenv environment variables file
 .env
 
+# Add any directories, files, or patterns you don't want to be tracked by version control
+
+# git
+*.orig
+
+# node.js
+node_modules/
+npm-debug.log
+
+# Mac system files
+.DS_Store
+
+# sass
+.sach-cache/
+
+# editor files
+.idea
+.vscode/
+jsconfig.json
